# rakuten-bid-rigging

./: Dockerfile  README.md  docker-compose.debug.yml  docker-compose.yml  pyproject.toml  requirements.txt
.devcontainer/: devcontainer.json  install.sh
src/: main.py  proxy.py
src/libs/: auth.py  models.py  wrapper.py
tests/: test_api.py
