[tool.poetry]
name = "rakuten-bid-rigging"
version = "0.1.0"
description = ""
authors = ["MtkN1 <51289448+MtkN1@users.noreply.github.com>"]

[tool.poetry.dependencies]
python = "^3.11"
httpx = "^0.23.1"
python-dotenv = "^0.21.0"
rich = "^12.6.0"

[tool.poetry.dev-dependencies]
ipykernel = "^6.18.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
